Implement LOGIN logic

--- a/static/css/backend.css
+++ b/static/css/backend.css
@@ -42,3 +42,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+@media (min-width: 768px) { 
+  .bad-login {
+    margin: 10px -40px;
+  }
+}
