--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,21 @@ h3 a {
 
 .news p {}
 
+.header {
+  padding: .5rem 1rem;
+}
+
+.header a {
+  color: inherit;
+  text-decoration: none;
+}
+
+#blog, #accueil {
+  margin: 40px auto 0;
+  text-align: center;
+  font-weight: bolder;
+}
+
 
 blockquote{
   font-size: 1.4em;
