--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ h3 a {
   text-decoration: none;
 }
 
-#blog, #accueil {
+#blog, #accueil, .main-title {
   margin: 40px auto 0;
   text-align: center;
   font-weight: bolder;
